# simple-ufs

./: .gitignore  README.md  build.sh  get.sh  get_build_run.sh
.github/workflows/: build_centos7.yml  build_centos8.yml  build_debian.yml  build_fedora.yml  build_linux.yml  build_macos.yml  build_macos.yml.disabled  build_rockylinux.yml  build_ubuntu.yml
docker/: Dockerfile.centos7  Dockerfile.centos8  Dockerfile.debian  Dockerfile.fedora  Dockerfile.oneapi  Dockerfile.rockylinux  Dockerfile.ubuntu  Dockerfile.ubuntu_18.04_intel
libs/: CMakeLists.txt  fetch.sh
libs/cmake/: FindJasper.cmake
libs/mpilibs/: build.sh
libs/nceplibs/: build.sh  get.sh
libs/patches/: pnetcdf-1.14.0_gcc15.patch
libs/ufslibs/: .gitignore  CMakeLists.txt  fetch.sh
libs/ufslibs/patches/: hdf5-1.14.4.2_add_zstd.patch  hdf5-1.14.6_add_zstd_lz4.patch
run/: configuration.sh  fetch_fix_data.sh  fetch_input_data.sh  fix_data.md5sum  run.sh  run_chgres.sh  run_chgres_cube.sh  run_grid_orog.sh  run_model.sh  run_post.sh  run_preproc.sh
run/global_conf/: GFSphys_var_map.txt  chgres_cube_grib2.nml.in  diag_table  diag_table.in  fd_nems.yaml  input.nml  input.nml.in  itag  model_configure  model_configure.in  noahmptable.tbl
run/regional_conf/: fd_ufs.yaml  field_table  input.nml  input.nml.in  itag  model_configure  model_configure.in  params_grib2_tbl_new
src/: get.sh  preproc.patch
src/patches/: conf_configure.fv3.linux.gnu  conf_configure.fv3.linux.intel  conf_configure.fv3.linux.pgi  modulefiles_linux.gnu_fv3  modulefiles_linux.intel_fv3  modulefiles_linux.pgi_fv3
